feat: 增加工具包；

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@
 
 ### Emacs ###
 # -*- mode: gitignore; -*-
-bkcodeai.json
+/bkcodeai.json
+/dataset
 *~
 \#*\#
 /.emacs.desktop
@@ -176,7 +177,8 @@ ipython_config.py
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
